test/fail/integration/_fail_sem_if_block_func_1.hs
x :: Int
x = if True then 4 else "hello"
main = print "hello"